fix y-overflowing of reference section

--- a/src/index.css
+++ b/src/index.css
@@ -159,6 +159,7 @@ pre {
 
 .post {
   text-align: justify;
+  word-wrap: break-word;
 }
 
 .post a:visited {
